tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpcmpgtw_xmm_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:251:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %15) #22
            ^
0.02user 0.03system 0:00.07elapsed 81%CPU (0avgtext+0avgdata 27464maxresident)k
0inputs+16outputs (0major+3281minor)pagefaults 0swaps
